--- a/src/Cart/Cart.scss
+++ b/src/Cart/Cart.scss
@@ -92,6 +92,7 @@
                     color: white;
                     font-size: 18px;
                     font-weight: 600;
+                    text-decoration: none;
                 }
             }
             button{
