--- a/src/Login/Login.scss
+++ b/src/Login/Login.scss
@@ -1,5 +1,10 @@
-.container{
+.login-display{
+    display: flex;
+    flex-direction: column;
+}
+.login-container{
     // width: 100%;
+    margin-top: 110px;
     padding: 0 40px;
     color:rgb(51, 54, 56);
     display: flex;
