--- a/src/Login/Register.scss
+++ b/src/Login/Register.scss
@@ -1,5 +1,10 @@
+.register-display{
+    display: flex;
+    flex-direction: column;
+}
 .container{
     // width: 100%;
+    margin-top: 110px;
     padding: 0 40px;
     color: black;
     display: flex;
