--- a/src/Homepage/Homepage.scss
+++ b/src/Homepage/Homepage.scss
@@ -35,10 +35,20 @@
         margin-top: 50px;
         width: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
+        align-items: flex-start;
+        .item__title{
+            margin-top:50px ;
+            text-transform: uppercase;
+            font-size: 20px;
+            font-weight: 500;
+            border-bottom: 1px solid #e0e1e1;
+            margin-bottom: 20px;
+        }
         .row{
             width: 100%;
+            margin-bottom: 50px;
         }
     }
 
