--- a/src/Customer/OrderStatus.scss
+++ b/src/Customer/OrderStatus.scss
@@ -34,9 +34,9 @@
     color: white;
 }
 
-.checkorder-container{
+.orderstatus-container{
     padding-top: 150px;
-    .checkorder-title{
+    .orderstatus-title{
         font-size: 32px;
         font-weight: 700;
         color: #04AA6D;
