--- a/src/Homepage/Homepage.scss
+++ b/src/Homepage/Homepage.scss
@@ -30,6 +30,13 @@
             border-bottom: 3px solid black;
         }
         border-bottom: 1px solid rgb(224, 225, 225);
+
+        .sort-item{
+            font-size: 18px;
+            border: none;
+            margin-left: 200px;
+            padding:10px 5px;
+        }
     }
     .coffee{
         margin-top: 50px;
