--- a/src/Cart/Cart.scss
+++ b/src/Cart/Cart.scss
@@ -37,6 +37,9 @@
                         margin-right: 12px;
                     }
                 }
+                .cart-header__right{
+                    cursor: pointer;
+                }
             }
             .cart-content{
                 display: flex;
